--- a/src/assets/css/layout/_main.scss
+++ b/src/assets/css/layout/_main.scss
@@ -8,7 +8,19 @@ html {
 }
 
 body {
-  font-family: var(--font-family);
+  font-family:
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif;
   color: var(--text-color);
   background-color: var(--surface-ground);
   margin: 0;
@@ -16,6 +28,7 @@ body {
   min-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 a {
