--- a/src/assets/css/layout/layout.scss
+++ b/src/assets/css/layout/layout.scss
@@ -4,6 +4,7 @@
 @import "./_main";
 @import "./_topbar";
 @import "./_menu";
+@import "./_config";
 @import "./_content";
 @import "./_footer";
 @import "./_responsive";
